# smart-mcp

./: .gitignore  README.md  example.json  main.py  mcp_server.py  pyproject.toml
agent/: main.py
agent/data/: question_list.json
agent/model/: model.py
agent/questioner/: questioner.py
